@@ -1,17 +1,16 @@
 Package: relsurv
 Title: Relative Survival
-Date: 2018-8-27
-Version: 2.2-1
-Authors@R: c(person(c("Maja","Pohar","Perme"),role=c("aut","cre"),email="maja.pohar@mf.uni-lj.si"),person("Klemen", "Pavlic", role = "ctb",
-		     email = "klemen.pavlic@mf.uni-lj.si"))
-Author: Maja Pohar Perme [aut, cre],
-  Klemen Pavlic [ctb]
+Date: 2018-10-18
+Version: 2.2-2
+Authors@R: c(person(c("Maja","Pohar","Perme"),role=c("aut","cre"),email="maja.pohar@mf.uni-lj.si"))
+Author: Maja Pohar Perme [aut, cre]
 Maintainer: Maja Pohar Perme <maja.pohar@mf.uni-lj.si>
 Description: Contains functions for analysing relative survival data, including nonparametric estimators of net (marginal relative) survival, relative survival ratio, crude mortality, methods for fitting  and checking additive and multiplicative regression models, transformation approach, methods for dealing with population mortality tables.
-Depends: R (>= 2.10), survival, splines, date
+Depends: R (>= 2.10), survival (>= 2.42), date
+Imports: splines
 License: GPL
 LazyData: true
 NeedsCompilation: yes
 Repository: CRAN
-Packaged: 2018-08-27 11:48:14 UTC; majap
-Date/Publication: 2018-08-28 06:20:03 UTC
+Packaged: 2018-10-18 11:21:59 UTC; majap
+Date/Publication: 2018-10-18 12:00:03 UTC
