@@ -1,29 +1,0 @@
-cmp.rel			Compute crude probability of dying
-plot.cmp.rel		Plot the crude probability of dying
-summary.cmp.rel		Print the crude probability of dying at given timepoints
-invtime                 Inverse transforming of time in Relative
-                        Survival
-joinrate                Join ratetables
-plot.rs.zph             Graphical Inspection of Proportional Hazards
-                        Assumption in Relative Survival Models
-rdata                   Survival Data
-residuals.rsadd         Calculate Residuals for a "rsadd" Fit
-rformulate              Auxiliary Function for relsurv
-rs.br                   Test the Proportional Hazards Assumption for
-                        Relative Survival Regression Models
-rs.surv                 Compute a Relative Survival Curve
-rs.zph                  Behaviour of Covariates in Time for Relative
-                        Survival Regression Models
-rsadd                   Fit an Additive model for Relative Survival
-rsmul                   Fit Andersen et al Multiplicative Regression
-                        Model for Relative Survival
-rstrans                 Fit Cox Proportional Hazards Model in
-                        Transformed Time
-slopop                  Census Data Set for the Slovene Population
-survfit.rsadd           Compute a Predicited Survival Curve
-survsplit               Split a Survival Data Set at Specified Times
-transrate               Reorganize Data into a Ratetable Object
-transrate.hld           Reorganize Data obtained from Human Life-Table
-                        Database into a Ratetable Object
-transrate.hmd           Reorganize Data obtained from Human Mortality
-                        Database into a Ratetable Object
